# ray-tracer

./: Cargo.toml
examples/: chapter_01.rs  chapter_02.rs  chapter_03.rs  chapter_04.rs
images/: chapter_02.ppm  chapter_04.ppm
src/: canvas.rs  color.rs  helper.rs  lib.rs  matrix.rs  projectile.rs  tuple.rs
